[metadata]
# replace with your username:
name = cbr_analysis-palec
version = 0.0.2
url = https://github.com/palec87/cbr_analysis_v0
author = David Palecek
author_email = david@stanka.de
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Analysis package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7