[metadata]
# replace with your username:
name = cbr-analysis
version = 0.1.2
url = https://github.com/palec87/cbr-analysis/archive/v0.1.2.tar.gz
author = DP
author_email = david@stanka.de
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = OE analysis
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7